--- a/public/home.html
+++ b/public/home.html
@@ -462,19 +462,19 @@
                 <span class="impact-change"> This semester</span>
             </div>
             <div class="impact-card">
-                <div class="impact-icon">👥</div>
+                <div class="impact-icon"></div>
                 <div class="impact-value" id="totalUsers">-</div>
                 <div class="impact-label">Eco Warriors</div>
                 <span class="impact-change">Growing community</span>
             </div>
             <div class="impact-card">
-                <div class="impact-icon">✅</div>
+                <div class="impact-icon"></div>
                 <div class="impact-value" id="totalChallengesCompleted">-</div>
                 <div class="impact-label">Challenges Completed</div>
                 <span class="impact-change"> Keep it up!</span>
             </div>
             <div class="impact-card">
-                <div class="impact-icon">🏆</div>
+                <div class="impact-icon"></div>
                 <div class="impact-value" id="totalTeams">-</div>
                 <div class="impact-label">Active Teams</div>
                 <span class="impact-change"> Join one!</span>
@@ -511,10 +511,10 @@
         </div>
 
         <!-- Sustainability Articles -->
-        <h2 class="section-title">📰 Sustainability News & Tips</h2>
+        <h2 class="section-title">Sustainability News & Tips</h2>
         <div class="articles-grid">
             <div class="article-card">
-                <div class="article-image">🌊</div>
+                <div class="article-image"></div>
                 <div class="article-content">
                     <span class="article-tag">Ocean</span>
                     <h3 class="article-title">How Reducing Plastic Saves Marine Life</h3>
@@ -523,7 +523,7 @@
                 </div>
             </div>
             <div class="article-card">
-                <div class="article-image">🥗</div>
+                <div class="article-image"></div>
                 <div class="article-content">
                     <span class="article-tag">Food</span>
                     <h3 class="article-title">The Environmental Impact of Your Diet</h3>
