--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
         <!-- Header -->
         <header class="header">
             <div class="logo">
-                <span class="logo-icon">🌍</span>
+                <span class="logo-icon"></span>
                 <h1>GreenGoals</h1>
             </div>
             <p class="tagline">Social Eco-Challenges with Friends</p>
@@ -40,14 +40,14 @@
             <!-- Login Form -->
             <form id="loginForm" class="auth-form active">
                 <div class="form-group">
-                    <label for="loginEmail">Email</label>
-                    <input type="email" id="loginEmail" placeholder="you@example.com" required>
-                    <span class="input-icon">📧</span>
+                    <label for="loginUsername">Username or Email</label>
+                    <input type="text" id="loginUsername" placeholder="username or email" required>
+                    <span class="input-icon"></span>
                 </div>
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
                     <input type="password" id="loginPassword" placeholder="••••••••" required>
-                    <span class="input-icon">🔒</span>
+                    <span class="input-icon"></span>
                 </div>
                 <button type="submit" class="submit-btn">
                     <span>Sign In</span>
