--- a/public/profile.html
+++ b/public/profile.html
@@ -308,9 +308,9 @@
             display: flex;
             gap: 12px;
             margin-bottom: 24px;
-            flex-wrap: wrap;
         }
         .tab-link {
+            flex: 1;
             padding: 12px 24px;
             background: rgba(255,255,255,0.15);
             color: var(--cream);
@@ -319,6 +319,7 @@
             font-weight: 500;
             transition: all 0.3s;
             border: 1px solid rgba(255,255,255,0.2);
+            text-align: center;
         }
         .tab-link:hover, .tab-link.active {
             background: var(--gold);
@@ -483,6 +484,7 @@
             <a href="home.html" class="tab-link">Home</a>
             <a href="challenges.html" class="tab-link">Challenges</a>
             <a href="leaderboard.html" class="tab-link">Leaderboard</a>
+            <a href="teams.html" class="tab-link">Teams</a>
             <a href="profile.html" class="tab-link">Profile</a>
         </div>
 
@@ -540,7 +542,7 @@
     <!-- Edit Profile Modal -->
     <div class="modal-overlay" id="editModal">
         <div class="modal">
-            <h2>✏️ Edit Profile</h2>
+            <h2>Edit Profile</h2>
             
             <div class="form-group">
                 <label>Choose Avatar</label>
@@ -585,7 +587,7 @@
     <!-- Evidence Upload Modal -->
     <div class="modal-overlay" id="evidenceModal">
         <div class="modal">
-            <h2>📸 Submit Evidence</h2>
+            <h2>Submit Evidence</h2>
             <p style="color: var(--text-light); margin-bottom: 20px;" id="evidenceChallengeName">Upload a photo to verify you completed the challenge</p>
             
             <input type="hidden" id="evidenceChallengeId">
