--- a/public/profile.html
+++ b/public/profile.html
@@ -500,7 +500,7 @@
         <!-- Profile Card -->
         <div class="profile-card">
             <div class="profile-header">
-                <button class="edit-profile-btn" onclick="openEditModal()">✏️ Edit Profile</button>
+                <button class="edit-profile-btn" onclick="openEditModal()"> Edit Profile</button>
                 <div class="profile-avatar" id="profileAvatar">
                     🌿
                 </div>
